fix projects gap

--- a/media.css
+++ b/media.css
@@ -175,8 +175,9 @@
   .card-body {
     display: flex;
     justify-content: flex-start;
-    /* border: 1px solid red; */
+    border: 1px solid red;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
+    /* width: 280px; */
   }
 
   .card-image {
